force-app/main/default/objects/Secure_Packaging__c/Secure_Packaging__c.object-meta.xml
<CustomObject>
    <label>Secure Packaging</label>
    <nameField>
        <label>Shipping Note Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Packagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>