force-app/main/default/objects/Secure_Packaging__c/fields/Allocated_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Allocated_To_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated To Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secure Packagings</relationshipLabel>
    <relationshipName>Secure_Packagings</relationshipName>
    <type>Lookup</type>
</CustomField>