force-app/main/default/objects/Secure_Packaging__c/fields/Allocated_To_Hub__c.field-meta.xml
<CustomField>
    <fullName>Allocated_To_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated To Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Packagings</relationshipLabel>
    <relationshipName>Secure_Packagings</relationshipName>
    <type>Lookup</type>
</CustomField>