force-app/main/default/objects/Secure_Packaging__c/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <label>Bar Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>