force-app/main/default/objects/Secure_Packaging__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <formula>IMAGE(&quot;https://barcode.tec-it.com/barcode.ashx?data=&quot;+Name+&quot;&amp;code=Code128&amp;dpi=96&amp;dataseparator=&quot;, &quot;Code&quot; ,70,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Barcode</label>
    <type>Text</type>
</CustomField>