force-app/main/default/objects/Secure_Packaging__c/fields/Barcode_Type__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Type__c</fullName>
    <label>Barcode Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Note Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>