force-app/main/default/objects/Secure_Packaging__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital</label>
    <type>Checkbox</type>
</CustomField>