force-app/main/default/objects/Secure_Packaging__c/fields/Finalised_Linehaul_Number__c.field-meta.xml
<CustomField>
    <fullName>Finalised_Linehaul_Number__c</fullName>
    <label>Finalised Linehaul Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>