force-app/main/default/objects/Secure_Packaging__c/fields/Linehaul_Status__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Status__c</fullName>
    <label>Linehaul Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>