force-app/main/default/objects/Secure_Packaging__c/fields/Linehaul_Type__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Type__c</fullName>
    <label>Linehaul Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>