force-app/main/default/objects/Secure_Packaging__c/fields/Opening_Stock__c.field-meta.xml
<CustomField>
    <fullName>Opening_Stock__c</fullName>
    <label>Opening Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>