force-app/main/default/objects/Secure_Packaging__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Secure Packagings</relationshipLabel>
    <relationshipName>Secure_Packagings</relationshipName>
    <type>Lookup</type>
</CustomField>