force-app/main/default/objects/Secure_Packaging__c/fields/Size_of_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Packaging__c</fullName>
    <label>Size of Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>