force-app/main/default/objects/Secure_Packaging__c/fields/Status_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Status_Identifier__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Status Identifier</label>
    <type>AutoNumber</type>
</CustomField>