force-app/main/default/objects/Secure_Packaging__c/fields/Trunk_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Trunk_Supplier__c</fullName>
    <label>Trunk Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVC</fullName>
            </value>
            <value>
                <fullName>SpiceJet</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>