force-app/main/default/objects/Secure_Packaging__c/fields/Type_of_Package__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Package__c</fullName>
    <label>Type of Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trunk</fullName>
                <default>true</default>
                <label>Trunk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>