force-app/main/default/objects/Secure_Packaging__c/fields/Type_of_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Packaging__c</fullName>
    <label>Type of Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secure Bag</fullName>
            </value>
            <value>
                <fullName>Secure Seal</fullName>
            </value>
            <value>
                <fullName>Shipping Label</fullName>
            </value>
            <value>
                <fullName>Yellow Seal</fullName>
            </value>
            <value>
                <fullName>White Seal</fullName>
            </value>
            <value>
                <fullName>Wire Seal</fullName>
            </value>
            <value>
                <fullName>Airline Box</fullName>
                <isActive>false</isActive>
                <label>Airline Box</label>
            </value>
            <value>
                <fullName>Linehaul Box</fullName>
                <isActive>false</isActive>
                <label>Linehaul Box</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>