force-app/main/default/objects/Secure_Packaging__c/fields/WIP__c.field-meta.xml
<CustomField>
    <fullName>WIP__c</fullName>
    <label>WIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>