force-app/main/default/objects/Secure_Packaging__c/recordTypes/Bar_Code_Master.recordType-meta.xml
<RecordType>
    <fullName>Bar_Code_Master</fullName>
    <active>true</active>
    <label>Bar Code Master</label>
</RecordType>