force-app/main/default/objects/Secure_Packaging__c/recordTypes/Secure_Bag.recordType-meta.xml
<RecordType>
    <fullName>Secure_Bag</fullName>
    <active>true</active>
    <label>Secure Bag</label>
</RecordType>