force-app/main/default/objects/Secure_Packaging__c/recordTypes/Secure_Seal.recordType-meta.xml
<RecordType>
    <fullName>Secure_Seal</fullName>
    <active>true</active>
    <label>Secure Seal</label>
</RecordType>