force-app/main/default/objects/Secure_Packaging__c/recordTypes/Shipping_Label.recordType-meta.xml
<RecordType>
    <fullName>Shipping_Label</fullName>
    <active>true</active>
    <label>Shipping Label</label>
</RecordType>