force-app/main/default/objects/Secure_Packaging__c/recordTypes/Trunk.recordType-meta.xml
<RecordType>
    <fullName>Trunk</fullName>
    <active>true</active>
    <label>Trunk</label>
</RecordType>