force-app/main/default/objects/Secure_Packaging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shipment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>