force-app/main/default/objects/Secure_Packaging__c/listViews/All_Digital_Shipping_Note.listView-meta.xml
<ListView>
    <fullName>All_Digital_Shipping_Note</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Digital__c</columns>
    <columns>Shipment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Packaging__c</field>
        <operation>equals</operation>
        <value>Shipping Label</value>
    </filters>
    <filters>
        <field>Digital__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>All - Shipping Note</label>
</ListView>