force-app/main/default/objects/Secure_Packaging__c/listViews/All_Secure_Bag.listView-meta.xml
<ListView>
    <fullName>All_Secure_Bag</fullName>
    <columns>NAME</columns>
    <columns>Allocated_To_Hub__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Shipment__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Packaging__c</field>
        <operation>equals</operation>
        <value>Secure Bag</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>All - Secure Bag</label>
</ListView>