force-app/main/default/objects/Secure_Packaging__c/listViews/Secure_Seal.listView-meta.xml
<ListView>
    <fullName>Secure_Seal</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>Allocated_To_Hub__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Finalised_Linehaul_Number__c</columns>
    <columns>Linehaul_Status__c</columns>
    <columns>Linehaul_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Secure_Packaging__c.Secure_Seal</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>X</value>
    </filters>
    <label>All - Secure Seal</label>
</ListView>