force-app/main/default/objects/Secure_Packaging__c/listViews/Shipping_Label.listView-meta.xml
<ListView>
    <fullName>Shipping_Label</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Digital__c</columns>
    <columns>Shipment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <filters>
        <field>Type_of_Packaging__c</field>
        <operation>equals</operation>
        <value>Shipping Label</value>
    </filters>
    <filters>
        <field>Digital__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Digital Shipping Label</label>
</ListView>