force-app/main/default/objects/Secure_Packaging__c/listViews/Trunks.listView-meta.xml
<ListView>
    <fullName>Trunks</fullName>
    <columns>NAME</columns>
    <columns>Shipment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Secure_Packaging__c.Trunk</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available,Consumed</value>
    </filters>
    <label>Trunks</label>
</ListView>